--- a/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiSystem.fxml
@@ -11,7 +11,7 @@
 <children>
   				<ToolBar layoutX="205.0" layoutY="185.5" maxHeight="35.0" minHeight="35.0">
 					<items>
-						<Button mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
+						<Button fx:id="btnSpeichern" mnemonicParsing="false" onAction="#speichern" text="Änderungen speichern" />
 						<Button fx:id="btnLoeschen" mnemonicParsing="false" onAction="#loeschen" text="System löschen" />
 					</items>
 <VBox.margin>
