mit Logging und Partner-Edit/Verwendungen

--- a/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
@@ -23,7 +23,8 @@
 						</Menu>
 						<Menu mnemonicParsing="false" text="Hilfe">
 							<items>
-								<MenuItem mnemonicParsing="false" onAction="#btnUeber" text="Über" /><MenuItem mnemonicParsing="false" onAction="#showJavaInfo" text="Java-Laufzeit-Info anzeigen" />
+								<MenuItem mnemonicParsing="false" onAction="#btnUeber" text="Über" />
+								<MenuItem mnemonicParsing="false" onAction="#showJavaInfo" text="Java-Laufzeit-Info anzeigen" />
 							</items>
 						</Menu>
 					</menus>
@@ -41,27 +42,29 @@
 							<children>
 								<SplitPane dividerPositions="0.32338308457711445" prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<items>
-<AnchorPane minHeight="0.0" minWidth="0.0">
-<children>
-										<VBox prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+										<AnchorPane minHeight="0.0" minWidth="0.0">
 											<children>
-												<ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
-													<items>
-														<Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" />
-														<Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
-													</items>
-												</ToolBar>
-												<TableView fx:id="tableEdiNrAuswahl" prefHeight="702.0" prefWidth="535.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
-													<columns>
-														<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." /><TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="127.0" text="Integration" /><TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="85.0" text="Sender" />
-														<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Name des EDI-Eintrages" />
-													</columns>
-												</TableView>
+												<VBox prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+													<children>
+														<ToolBar layoutX="-48.0" layoutY="14.0" prefWidth="200.0">
+															<items>
+																<Button fx:id="btnNewEdiNr" mnemonicParsing="false" onAction="#newEdiNr" text="Neu" />
+																<Button fx:id="btnDeleteEdiEintrag" disable="true" mnemonicParsing="false" onAction="#deleteEdiEintrag" text="Löschen" />
+															</items>
+														</ToolBar>
+														<TableView fx:id="tableEdiNrAuswahl" prefHeight="702.0" prefWidth="535.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+															<columns>
+																<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." />
+																<TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="127.0" text="Integration" />
+																<TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="85.0" text="Sender" />
+																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Name des EDI-Eintrages" />
+															</columns>
+														</TableView>
+													</children>
+												</VBox>
 											</children>
-										</VBox>
-</children>
-</AnchorPane>
-									 	<fx:include fx:id="ediEintrag" disable="true" source="EdiEintrag.fxml" />
+										</AnchorPane>
+										<fx:include fx:id="ediEintrag" disable="true" source="EdiEintrag.fxml" />
 									</items>
 								</SplitPane>
 							</children>
@@ -72,13 +75,22 @@
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-								<TableView fx:id="tablePartnerAuswahl" editable="true" maxWidth="1.7976931348623157E308" prefHeight="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-									<columns>
-										<TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
-										<TableColumn fx:id="tColAuswahlPartnerSysteme" editable="false" prefWidth="65.0" text="Systeme" />
-										<TableColumn fx:id="tColAuswahlPartnerKomponenten" editable="false" prefWidth="91.0" text="Komponenten" />
-									</columns>
-								</TableView>
+								<SplitPane dividerPositions="0.24" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<items>
+										<AnchorPane>
+											<children>
+												<TableView fx:id="tablePartnerAuswahl" editable="true" maxWidth="1.7976931348623157E308" prefHeight="471.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+													<columns>
+														<TableColumn fx:id="tColAuswahlPartnerName" prefWidth="116.0" text="Partner" />
+														<TableColumn fx:id="tColAuswahlPartnerSysteme" editable="false" prefWidth="65.0" text="Systeme" />
+														<TableColumn fx:id="tColAuswahlPartnerKomponenten" editable="false" prefWidth="91.0" text="Komponenten" />
+													</columns>
+												</TableView>
+											</children>
+										</AnchorPane>
+										<fx:include fx:id="ediPartner" disable="true" source="EdiPartner.fxml" />
+									</items>
+								</SplitPane>
 							</children>
 						</AnchorPane>
 					</content>
@@ -87,22 +99,22 @@
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
-                        		<SplitPane dividerPositions="0.3" layoutX="7.0" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-		                           <items>
-        		                      <AnchorPane>
-                		                 <children>
-            								<TableView fx:id="tableSystemAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            									<columns>
-            										<TableColumn fx:id="tColSelSystemSystemName" prefWidth="159.0" text="System" />
-            										<TableColumn fx:id="tColSelSystemPartnerName" editable="false" prefWidth="153.0" text="Partner" />
-            										<TableColumn fx:id="tColSelSystemKomponenten" editable="false" prefWidth="106.0" text="Komponenten" />
-            									</columns>
-            								</TableView>
-                        		         </children>
-                              		  </AnchorPane>
-							  		  <fx:include fx:id="ediSystem" disable="true" source="EdiSystem.fxml" />
-                           			</items>
-		                        </SplitPane>
+								<SplitPane dividerPositions="0.3" layoutX="7.0" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+									<items>
+										<AnchorPane>
+											<children>
+												<TableView fx:id="tableSystemAuswahl" editable="true" prefHeight="471.0" prefWidth="306.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+													<columns>
+														<TableColumn fx:id="tColSelSystemSystemName" prefWidth="159.0" text="System" />
+														<TableColumn fx:id="tColSelSystemPartnerName" editable="false" prefWidth="153.0" text="Partner" />
+														<TableColumn fx:id="tColSelSystemKomponenten" editable="false" prefWidth="106.0" text="Komponenten" />
+													</columns>
+												</TableView>
+											</children>
+										</AnchorPane>
+										<fx:include fx:id="ediSystem" disable="true" source="EdiSystem.fxml" />
+									</items>
+								</SplitPane>
 							</children>
 						</AnchorPane>
 					</content>
