--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -18,7 +18,7 @@
 						<Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
 					</VBox.margin>
 				</ToolBar>
-				<TitledPane fx:id="paneAnbindung" animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Integrationsszenario">
+				<TitledPane fx:id="paneSzenario" animated="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Integrationsszenario">
 					<content>
 						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
 							<children>
