System-Panel abfragen/sichern

--- a/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiMain.fxml
@@ -147,14 +147,14 @@
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <SplitPane dividerPositions="0.4164889836531628" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <SplitPane dividerPositions="0.3070362473347548" prefHeight="716.0" prefWidth="1409.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                  <children>
                                     <TableView fx:id="tableIntegrationAuswahl" prefHeight="714.0" prefWidth="416.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                       <columns>
                                         <TableColumn fx:id="tColSelIntegrationName" prefWidth="426.0" text="Integration" />
-                                        <TableColumn fx:id="tColSelIntegrationKonfigurationAnzahl" prefWidth="147.0" text="Anzahl Konfigurationen" />
+                                        <TableColumn fx:id="tColSelIntegrationKonfigurationAnzahl" prefWidth="147.0" text="Anzahl Konfigurationen" visible="false" />
                                       </columns>
                                     </TableView>
                                  </children>
@@ -165,12 +165,16 @@
                      </children></AnchorPane>
 					</content>
 				</Tab>
-				<Tab disable="true" text="Konfigurationen">
+				<Tab fx:id="tabKonfigurationen" disable="true" text="Konfigurationen">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
 					</content>
-				</Tab>
-				<Tab fx:id="tabGeschaeftsobjekt" text="Geschäftsobjekte">
+				</Tab><Tab fx:id="tabKontaktPersonen" disable="true" text="Kontakt-Personen">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+  </content>
+</Tab>
+				<Tab fx:id="tabGeschaeftsobjekte" text="Geschäftsobjekte">
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 							<children>
