--- a/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
+++ b/EdiListFX/src/de/vbl/ediliste/view/EdiEintrag.fxml
@@ -22,7 +22,7 @@
 					<content>
 						<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
 							<children>
-								<GridPane hgap="8.0" layoutX="9.600000381469727" layoutY="9.600000381469727" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="251.0" vgap="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<GridPane hgap="8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="251.0" vgap="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<columnConstraints>
 										<ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" />
 										<ColumnConstraints hgrow="SOMETIMES" minWidth="111.0" />
@@ -54,7 +54,7 @@
 										</TableView><Button fx:id="btnNewSzenario" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#newSzenario" text="Neues Szenrio anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="1" /><Button fx:id="btnNewConfiguration" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#newKonfiguration" text="Neue Konfiguration anlegen..." GridPane.columnIndex="2" GridPane.rowIndex="3" />
 									</children>
 <padding>
-<Insets right="8.0" />
+<Insets left="5.0" right="8.0" />
 </padding>
 								</GridPane>
 							</children>
@@ -73,11 +73,11 @@
                                        <children>
                                           <AnchorPane>
                                              <children>
-                              										<GridPane hgap="8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="298.0" prefWidth="949.0" vgap="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              										<GridPane hgap="8.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="298.0" vgap="8.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                               											<columnConstraints>
                               												<ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" prefWidth="140.0" />
                               												<ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" />
-                              												<ColumnConstraints hgrow="NEVER" maxWidth="95.0" minWidth="-Infinity" prefWidth="95.0" />
+                              												<ColumnConstraints hgrow="NEVER" maxWidth="120.0" prefWidth="110.0" />
                               												<ColumnConstraints hgrow="NEVER" maxWidth="112.0" minWidth="-Infinity" prefWidth="112.0" />
                               											</columnConstraints>
                               											<rowConstraints>
